# rodado

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  ask.py  audit-results.md  auth.py  basedosdados.duckdb  duckdb-ui.service  failed_tables.txt  gera_schemas.py  haloy.yml  index.html  open_gui.sh  package-lock.json  palantir.md  prepara_db.py  prepara_gui.py  requirements.txt  roda.sh  start.sh  sync_bq_to_local.py
ask/: Cargo.toml  system_prompt.md
ask/src/: main.rs  schema_filter.rs  sql_generator.rs  table_selector.rs
context/: basedosdados-schema.json  file_tree.md  join_graph.json  join_keys.md  schema_compact.txt  schema_compact_inline.txt  schema_ddl.sql  system_prompt.md
data/: basedosdados.duckdb  frentes_partidos.csv
dbquery/: Cargo.toml
docs/: 01_desigualdade_racial.md  02_educacao_mobilidade.md  03_saude_determinantes.md  04_mercado_trabalho.md  05_politica_representacao.md  06_crime_violencia.md  07_economia_credito.md  08_politicas_publicas.md  09_genero_familia.md  10_meio_ambiente.md  11_infraestrutura.md  12_interseccionalidade.md  13_migracao_urbanizacao.md  14_consumo_precos.md  15_poder_elites.md  16_economia_politica.md  17_agropecuaria_agronegocio.md  18_comercio_exterior.md  19_mercado_financeiro.md  20_ciencia_tecnologia.md  21_corrupcao_improbidade.md  22_clima_queimadas.md  23_epidemiologia.md  24_assistencia_saude.md  25_orcamento_federal.md  26_servidores_publicos.md  28_violencia_escolar.md  29_dados_eleitorais_stf.md  30_estrutura_produtiva.md  31_desenvolvimento_humano.md  32_conectividade.md  (+12 more)
(+112 files in other folders)
